force-app/main/default/objects/LicenseConditions__c/LicenseConditions__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>License Condition</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>