force-app/main/default/objects/LicenseConditions__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1
PacPoint-KN102219-Modified for PVL Sprint 2 Phase 1
MTX 02/12/26 - Modified to make Text Area Long</description>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>