force-app/main/default/objects/LicenseConditions__c/fields/DateDue__c.field-meta.xml
<CustomField>
    <fullName>DateDue__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>