force-app/main/default/objects/LicenseConditions__c/fields/DependentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense__c</fullName>
    <description>PacPoint-AZ112019 - Created for PVL phase 1.Used to populate the dependent license ID.</description>
    <formula>License__r.DependentLicense__c</formula>
    <label>Dependent License</label>
    <type>Text</type>
</CustomField>