force-app/main/default/objects/LicenseConditions__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Conditions</relationshipLabel>
    <relationshipName>LicenseConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>