force-app/main/default/objects/LicenseConditions__c/fields/LicenseCondition__c.field-meta.xml
<CustomField>
    <fullName>LicenseCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV111819 - Created for PVL phase 1. Created to have a relationship with the original license condition.</description>
    <label>License Condition</label>
    <referenceTo>LicenseConditions__c</referenceTo>
    <relationshipLabel>License Conditions</relationshipLabel>
    <relationshipName>License_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>