force-app/main/default/objects/LicenseConditions__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV010419 - Created for PVL phase 1. Created to be set by a pb when the Created Date = Today as a workaround since rollups don&apos;t support date filters</description>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>