force-app/main/default/objects/LicenseConditions__c/fields/RMEandEntity__c.field-meta.xml
<CustomField>
    <fullName>RMEandEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN102219-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>Check this checkbox when the License Conditions listed on this Record apply to both the RME and Entity. Leave unchecked if the License Conditions only apply to the RME.</inlineHelpText>
    <label>RME and Entity</label>
    <type>Checkbox</type>
</CustomField>